--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,21 @@
+constants: #내가 만든 속성
+  jwt:
+    issuer: green052@green.com # JWT 토큰 발행자 정보
+    bearer-format: JWT
+
+    claim-key: signedUser
+    secret-key: DeaguGrenArtAcademyClass502MsaClassFighting #비밀 레시피(절대 공개되어서는 안 된다.)
+
+    access-token-cookie-name: access-token
+    access-token-cookie-path: /
+    access-token-cookie-validity-seconds: 900 #15분
+    access-token-validity-milliseconds: 900_000 #15분
+
+    refresh-token-cookie-name: refresh-token
+    refresh-token-cookie-path: /api/user/reissue
+    refresh-token-cookie-validity-seconds: 1_296_000 #15일
+    refresh-token-validity-milliseconds: 1_296_000_000 #15일
+
 spring:
   application:
     name: board-auth
@@ -13,8 +31,8 @@ spring:
 
 mybatis:
   # MyBatis Mapper XML 파일 위치
-    configuration:
-      # DB 컬럼명과 자바 필드명 자동 매핑 설정
-      # ex) created_at → createdAt
-      map-underscore-to-camel-case: true
-    mapper-locations: mappers/**/*.xml
+  configuration:
+    # DB 컬럼명과 자바 필드명 자동 매핑 설정
+    # ex) created_at → createdAt
+    map-underscore-to-camel-case: true
+  mapper-locations: mappers/**/*.xml
